# BingWallpaperFetcher

./: README.md  bing-wallpaper-fetcher.spec  bing-wallpaper.spec  bing.py  inno_setup.iss  logger.py  pyinstaller.py  pyproject.toml  wallpaper-fetcher.spec
.github/workflows/: build_executables.yaml  publish_pypi.yaml
bingwallpaper/: __init__.py  autostart.py  wallpaper_fetcher.py
wallpaper_fetcher/: __init__.py  fetcher.py  wallpaper_fetcher.py  wallpaper_rotator.py
